<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <TextView
            android:id="@+id/sortTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_type_text" />

        <Spinner
            android:id="@+id/sortTypeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@id/sortTypeText" />

        <TextView
            android:id="@+id/sortOrderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sortTypeSpinner"
            android:text="@string/sort_order_text" />

        <Spinner
            android:id="@+id/sortOrderSpinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@id/sortOrderText" />

        <TextView
            android:id="@+id/itemQuantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sortOrderSpinner"
            android:text="@string/item_quant_text" />

        <EditText
            android:id="@+id/minEdit"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@id/itemQuantityText"
            android:hint="@string/min_edit_text"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/maxEdit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_toEndOf="@id/minEdit"
            android:layout_below="@id/itemQuantityText"
            android:hint="@string/max_edit_text"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Button
            android:id="@+id/saveButton"
            android:paddingTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/minEdit"
            android:text="@string/save_filter_button" />

        <Button
            android:id="@+id/resetButton"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/saveButton"
            android:layout_below="@id/maxEdit"
            android:text="@string/reset_filter_button" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>