<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".LoginActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/appLogo"
                android:contentDescription="@string/app_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textGreeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/greeting"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/user_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/pass_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/login_text"
                android:textColor="@color/black"
                app:backgroundTint="#2196F3" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/signup_text"
                android:textColor="@color/black"
                app:backgroundTint="#2196F3" />
    </LinearLayout>
</LinearLayout>