<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/itemTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingHorizontal="5dp"
        app:columnCount="3"
        app:layout_constraintTop_toBottomOf="@id/searchBox">

        <TextView
            android:id="@+id/itemLabel"
            android:text="@string/item_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="0dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/countLabel"
            android:text="@string/count_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="0dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/actionLabel"
            android:text="@string/action_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="0dp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="0" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/emptyListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="#777"
        android:layout_marginTop="30dp"
        android:text="@string/empty_list_text"
        app:layout_constraintTop_toBottomOf="@id/itemTable"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RelativeLayout
        android:id="@+id/scrollLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/addItemButton"
        app:layout_constraintTop_toBottomOf="@id/itemTable"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/scroll_desc">
            <LinearLayout
                android:id="@+id/itemList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- new items go here -->
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <Button
        android:id="@+id/addItemButton"
        android:text="@string/add_item_text"
        android:textColor="@color/black"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:backgroundTint="#2196F3" />

    <Button
        android:id="@+id/settingsButton"
        android:text="@string/settings_text"
        android:textColor="@color/black"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:backgroundTint="#2196F3" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/filterButton"
        app:layout_constraintTop_toBottomOf="@id/toolbar" >
    </androidx.appcompat.widget.SearchView>

    <Button
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_text"
        app:layout_constraintLeft_toRightOf="@id/searchBox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>