<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        app:columnCount="4">

        <TextView
            android:id="@+id/listItemLabel"
            android:textColor="@color/black"
            android:text="@string/list_item_text"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_margin="1dp"
            android:background="#DDD"
            android:padding="15dp"
            android:maxLines="1"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeMinTextSize="5dp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/itemCountLabel"
            android:textColor="@color/black"
            android:text="@string/item_count_text"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_margin="1dp"
            android:background="#CCC"
            android:textSize="20sp"
            android:padding="15dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/editIcon"
            android:background="#DDD"
            android:contentDescription="@string/edit_desc"
            android:padding="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            app:layout_column="2"
            app:layout_columnWeight="0.5"
            app:layout_rowWeight="1"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/deleteIcon"
            android:background="#A88"
            android:contentDescription="@string/delete_desc"
            android:padding="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            app:layout_column="3"
            app:layout_columnWeight="0.5"
            app:layout_rowWeight="1"
            app:srcCompat="@android:drawable/ic_menu_delete" />
    </androidx.gridlayout.widget.GridLayout>
</RelativeLayout>